<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controls.EventRemoveActivity">

    <TextView
        android:id="@+id/eventRemoveName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/blue"/>


    <TextView
        android:id="@+id/eventRemoveDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Date"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/eventRemoveTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Time"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Delete"
        android:textColor="@color/red"
        android:background="@null"
        android:textStyle="bold"
        android:onClick="removeEventAction"
        android:textSize="20sp"/>

</LinearLayout>